@@ -74,6 +74,26 @@ org.exolab.castor.builder.automaticConflictResolution=true</code-panel>
             <bugs>
                 <bug id="1893" tool="jira">
                     <description>
+                        Fixed problem with sequence validation and substitution groups (again).
+                    </description>
+                    <contributor>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </contributor>
+                    <submitter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </submitter>
+                    <reporter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </reporter>
+                    <type>Bug</type>
+                    <module>XML</module>
+                    <date>20070307</date>
+                </bug>
+                <bug id="1893" tool="jira">
+                    <description>
                         Fixed problem with sequence validation and substitution groups.
                     </description>
                     <contributor>
